# ImageEditLib

./: .gitignore  CMakeLists.txt  README.md
docs/: classes.html  classes_list.html  index-withframe.html  index.html  index_65.html  index_66.html  index_67.html  index_68.html  index_69.html  index_71.html  index_73.html  index_76.html  index_77.html  index_79.html  index_80.html  index_82.html  index_83.html  index_84.html  index_85.html  index_86.html  index_88.html  index_89.html  index_95.html  navig.html  packages.html  public_operations.html  public_properties.html
include/: base_operator.h  common.h  imagearch.h  layer.h  layerset.h  operation_manager.h  param.h  types.h
libs/stb/: stb_image.h
src/: CMakeLists.txt
src/common/: font.cpp  font.h  guid.cpp  guid.h  shader.h  utils.cpp  utils.h
src/drawing/: draw_helper.cpp  draw_helper.h
src/layers/: layer.cpp  layerset.cpp
src/operators/: base_operator_impl.cpp  base_operator_impl.h  creator.cpp  creator.h  ellipse.cpp  ellipse.h  local_operations_set.cpp  local_operations_set.h  move.cpp  move.h  operation_manager.cpp  operation_set.cpp  operation_set.h  rect.cpp  rect.h  representer.cpp  representer.h  rotate.cpp  rotate.h  scale.cpp  scale.h  text.cpp  text.h  types.cpp
tests/: Makefile  main.cpp
